changed buttons to divs and fixed alignment issues

--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -7,27 +7,32 @@
 .numbers {
     width: 73.5%;
     border-bottom: 1px solid grey;
-    margin-bottom: 3px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .numbers .big-button {
     background-color: white;
-    border-color: white;
-    border-left: 1px solid grey;
-    border-right: 1px solid grey;
+    border: 1px solid grey;
     width: 100%;
     height: 92px;
     font-size: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
 .numbers .num-button {
     background-color: white;
-    border-color: white;
     border: 1px solid grey;
     width: 33.3%;
-    height: 94px;
+    height: 92px;
     font-size: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .actions {
@@ -39,6 +44,11 @@
     background-color: darkorange;
     border-color: white;
     border: 1px solid grey;
-    height: 93.2px;
+    height: 92px;
     font-size: 65px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+    padding-right: 2%;
 }
